src/test/deca/etape_A/valid/if_elsif_else.deca
// Description :
//   test d'une boucle if ( else if )* else 

// Résultats :
//   Ok
{
if( 1 < 2 ) {
print("hello") ;
} else if ( 2 < 3 ){
print("ok") ;
} else if ( 3 < 4 ) {
 print("ko") ;
} else {
print("bye") ;
}
}